--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,4 +9,6 @@
 @import "register";
 @import "field";
 @import "personal__information";
+@import "screen__advertising";
+@import "screen__setting";
 @import "footer";
