--- a/scss/_notification.scss
+++ b/scss/_notification.scss
@@ -13,6 +13,8 @@
             height: 300px;
             margin: 10px auto 12px;
         }
+       
+        
     }
     &__desc{
         text-align: center;
@@ -44,5 +46,163 @@
         color: #121212;
         border: 1px solid #000;
         margin-bottom: 1rem;
+    }
+}
+
+// THÔNG BÁO
+.notification{
+    &__container{
+        padding-top: 4.5rem;
+    }
+    &__icons{
+        display: flex;
+        column-gap: 0.5rem;
+        margin-bottom: 1.2rem;
+    }
+    &__heading{
+        font-size: 20px;
+        font-weight: 600;
+        font-family: "SVN-Gilroy", sans-serif;
+        margin-bottom: 0px !important;
+    }
+    &__today{
+        font-size: 12px;
+        font-weight: 600;
+        font-family: "SVN-Gilroy", sans-serif;
+        color: $primary;
+    }
+    &__content{
+        margin-top: 1.2rem;
+        padding: 0 0 1.2rem 1.3rem;
+        border-bottom: 1px solid #B4B4B4;
+    }
+    &__login-notification{
+        border-left: 2px solid #000;
+        padding: 0 0 0 0.6rem;
+    }
+    &__login-notification,
+    &__main{
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 1.3rem;
+    }
+   
+    &-login-notification{
+        margin-bottom: 1.1rem;
+        letter-spacing: 1.2px;
+    }
+    &__device,
+    &__time,
+    &__location,
+    &__button{
+        font-size: 12px;
+        font-weight: 600;
+        font-family: "SVN-Gilroy", sans-serif;
+        color: #000;
+    }
+    &-login-notification{
+        font-size: 14px;
+        color: $black45;
+        font-weight: 600;
+        font-family: "SVN-Gilroy", sans-serif;
+        letter-spacing: -0.08px;
+    }
+    &__device,
+    &__time{
+        margin-bottom: 0.3rem;
+    }
+    &__device,
+    &__time{
+        letter-spacing: -0.2px;
+    }
+    &__location{
+        letter-spacing: -0.5px;
+    }
+    &__button{
+        &-white{
+        color: $graycf;
+        padding: 8px 10px;
+        border-radius: 30px;
+        background: $black12;
+        margin-right: 6px;
+        }
+        &-black{
+            color: $black15;
+            padding: 8px 10px;
+            border-radius: 30px;
+            background: #fff;
+            border: 1px solid $black12;
+        }
+    }
+    &-confirm-login{
+        color: #038168 ;
+    }
+    &__subtitle{
+        padding: 1rem 0 0.7rem 0;
+        position: relative;
+        border-bottom: 1px solid #B4B4B4;
+    }
+    &__day-ago{
+        color: $grayb4;
+        letter-spacing: -0.4px;
+    }
+    &-content{
+        padding: 0.8rem 0 1.2rem 0.6rem;
+        margin-top: 0.4rem !important;
+        background: linear-gradient(to right, #EFEFEF 0%,  #3DC6AB 100%);
+        border-radius: 10px;
+        border-bottom: none;
+    }
+    &__green{
+       border-left: 2px solid #04A786;
+       padding: 0 0 0 1.2rem;
+    }
+    &-login{
+        margin-bottom: 1rem;
+    }
+    &__login-history{
+        font-size: 12px;
+        font-weight: 600;
+        font-family: "SVN-Gilroy", sans-serif;
+        color: #1257db;
+        display: flex;
+        justify-content: right;
+        transform: translate(-20px, 1px);
+        letter-spacing: -0.1px;
+    }
+    &__check{
+        position: absolute;
+        top: 4.5rem;
+        right: 0.7rem;
+        width: 34px;
+        height: 34px;
+        background: #3FC644;
+        border-radius: 50%;
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        img{
+            width: 14px;
+            height: 14px;
+        }
+    }
+    &-time{
+        margin-bottom: 7px;
+    }
+    &__close{
+        background: #c63f3f;
+    }
+    &__danger{
+        color: #810303;
+        letter-spacing: -0.4px;
+    }
+    &-content__danger{
+        border-left: 2px solid #A70E04;
+    }
+    &__main-danger{
+        background: linear-gradient(to right, #EFEFEF 0%,  #F19C89 100%);
+    }
+    &-subtitle{
+        border-bottom: none;
     }
 }
