--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,4 +11,5 @@
 @import "personal__information";
 @import "screen__advertising";
 @import "screen__setting";
+@import "finance";
 @import "footer";
