--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,8 +1,4 @@
 .nav {
-    // height: 3.8rem;
-    // display: flex;
-    // justify-content: space-between;
-    // align-items: center;
     &__logo {
         color: $black13;
         font-weight: 590;
@@ -15,8 +11,14 @@
         display: flex;
         column-gap: 0.4rem;
         margin-right: 0.8rem;
-
-
+    }
+    &__link{
+        span{
+            color: $black45;
+            font-weight: 600;
+            font-size: 12px;
+            font-family: "SVN-Gilroy", sans-serif;
+        }
     }
     @media screen and (max-width: 1023px) {
         &__menu {
@@ -28,10 +30,11 @@
             right: 0;
             margin: 0 auto;
             transition: .4s;
-            padding: 10px 11px 0px 10px;
+            padding: 14px 11px 0px 10px;
             box-shadow: 0 4px 25px hsl(0, 0%, 80%);
             border-radius: 10px 10px 0 0;
             z-index: 3 !important;
+            height: 74px;
         }
         &__list {
             display: grid;
@@ -41,18 +44,13 @@
         }
         &__link {
             justify-content: center;
+            align-items: center;
             text-align: center;
             display: flex;
             flex-direction: column;
-            
-            align-items: center;
             text-decoration: none !important;
             font-family: "SVN-Gilroy", sans-serif;
-            span{
-                color: $black45;
-                font-weight: 600;
-                font-size: 12px;
-            }
+           
             img{
                 margin: 0 auto;
                 width: 24px;
@@ -77,7 +75,9 @@
     &__item{
         margin-bottom: 1px;
     }
-
+    &__charts{
+        transform: translateY(-6px);
+    }
     
 }
 .active-link{
