--- a/scss/_screen__setting.scss
+++ b/scss/_screen__setting.scss
@@ -49,52 +49,84 @@
     &-games{
         margin-bottom: 0.9rem !important;
     } 
+   
 }
 
-.custom{
-    &-checkbox{
-        position: relative;
-        display: inline-block;
-        width: 70px;
-        height: 26px;
-        margin-bottom: 33px;
-        text-align: center;
-        justify-content: center;
-    }
-    &-checkbox .slider{
-        position: absolute;
-        cursor: pointer;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: #454545;
-        transition: .4s;
-        border-radius: 34px;
-    }
-    .slider{
-        position: absolute;
-        right: 3rem;
-        color: #fff;
-    }
-    &-checkbox input:checked + .slider {
-        background-color: #2196F3;
-    }
-    &-checkbox .slider:before {
-        position: absolute;
-        content: "";
-        height: 19px;
-        width: 19px;
-        left: 4px;
-        bottom: 4px;
-        background-color: white;
-        transition: .4s;
-        border-radius: 50%;
-    }
-    &-checkbox input:checked + .slider:before {
-        transform: translateX(26px);
-    }
-}
-input[type="checkbox"] {
-    transform: translate(10px, 9px);
-}
+/* The switch - the box around the slider */
+.switch {
+    font-size: 17px;
+    position: relative;
+    display: inline-block;
+    width: 64px;
+    height: 26px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #454545;
+    transition: 0.4s;
+    border-radius: 30px;
+    box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.2);
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 20px;
+    width: 20px;
+    border-radius: 20px;
+    left: 3.2px;
+    bottom: 3.2px;
+    background-color: white;
+    transition: 0.4s;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  }
+  
+  .switch input:checked + .slider {
+    background-color: #4cc9f0;
+  }
+  
+  .switch input:focus + .slider {
+    box-shadow: 0 0 1px #4cc9f0;
+  }
+  
+  .switch input:checked + .slider:before {
+    transform: translateX(2em);
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  }
+  
+  /* Add some cool effects */
+  .slider:after {
+    content: "Off";
+    color: white;
+    position: absolute;
+    right: 0.6em;
+    top: 44%;
+    transform: translateY(-50%);
+    font-size: 16px;
+    font-weight: 600;
+    font-family: "SVN-Gilroy", sans-serif;
+    transition: opacity 0.4s;
+    opacity: 1;
+  }
+  
+  .switch input:checked + .slider:after {
+    content: "ON";
+    left: 0.5em;
+    opacity: 1;
+    right: auto;
+  }
