--- a/scss/main.css
+++ b/scss/main.css
@@ -156,6 +156,12 @@ body {
        column-gap: 0.4rem;
   margin-right: 0.8rem;
 }
+.nav__link span {
+  color: #454545;
+  font-weight: 600;
+  font-size: 12px;
+  font-family: "SVN-Gilroy", sans-serif;
+}
 @media screen and (max-width: 1023px) {
   .nav__menu {
     position: fixed;
@@ -166,10 +172,11 @@ body {
     right: 0;
     margin: 0 auto;
     transition: 0.4s;
-    padding: 10px 11px 0px 10px;
+    padding: 14px 11px 0px 10px;
     box-shadow: 0 4px 25px hsl(0, 0%, 80%);
     border-radius: 10px 10px 0 0;
     z-index: 3 !important;
+    height: 74px;
   }
   .nav__list {
     display: grid;
@@ -180,17 +187,12 @@ body {
   }
   .nav__link {
     justify-content: center;
+    align-items: center;
     text-align: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
     text-decoration: none !important;
     font-family: "SVN-Gilroy", sans-serif;
-  }
-  .nav__link span {
-    color: #454545;
-    font-weight: 600;
-    font-size: 12px;
   }
   .nav__link img {
     margin: 0 auto;
@@ -212,6 +214,9 @@ body {
 }
 .nav__item {
   margin-bottom: 1px;
+}
+.nav__charts {
+  transform: translateY(-6px);
 }
 
 .active-link {
@@ -870,9 +875,22 @@ body {
 }
 .registers-white {
   background-color: #fff !important;
-  color: #151515;
+  color: #151515 !important;
   border: 2px solid #151515;
   margin-top: 2.6rem;
+}
+.registers__wrong-login {
+  color: #E01600;
+  font-size: 14px;
+  font-weight: 600;
+  font-family: "SVN-Gilroy", sans-serif;
+  margin-bottom: 1.2rem;
+}
+.registers__form-phone {
+  margin-bottom: 2.17rem !important;
+}
+.registers__forgot-password {
+  letter-spacing: 0.75px !important;
 }
 @media screen and (min-width: 420px) {
   .registers__container {
@@ -1226,6 +1244,18 @@ body {
   width: 24px;
   height: 24px;
 }
+.screen__advertising-checkbox {
+  margin-bottom: 2.1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.screen__advertising-main {
+  margin-bottom: 7rem !important;
+}
+.screen__advertising-comment {
+  margin-bottom: 8rem;
+}
 
 .screen__setting-advertisement {
   font-size: 20px;
@@ -1279,16 +1309,24 @@ body {
   margin-bottom: 0.9rem !important;
 }
 
-.custom-checkbox {
+/* The switch - the box around the slider */
+.switch {
+  font-size: 17px;
   position: relative;
   display: inline-block;
-  width: 70px;
+  width: 64px;
   height: 26px;
-  margin-bottom: 33px;
-  text-align: center;
-  justify-content: center;
 }
-.custom-checkbox .slider {
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
   position: absolute;
   cursor: pointer;
   top: 0;
@@ -1297,31 +1335,118 @@ body {
   bottom: 0;
   background-color: #454545;
   transition: 0.4s;
-  border-radius: 34px;
-}
-.custom .slider {
-  position: absolute;
-  right: 3rem;
-  color: #fff;
-}
-.custom-checkbox input:checked + .slider {
-  background-color: #2196F3;
-}
-.custom-checkbox .slider:before {
-  position: absolute;
-  content: "";
-  height: 19px;
-  width: 19px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  transition: 0.4s;
-  border-radius: 50%;
-}
-.custom-checkbox input:checked + .slider:before {
-  transform: translateX(26px);
+  border-radius: 30px;
+  box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
-input[type=checkbox] {
-  transform: translate(10px, 9px);
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  border-radius: 20px;
+  left: 3.2px;
+  bottom: 3.2px;
+  background-color: white;
+  transition: 0.4s;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.switch input:checked + .slider {
+  background-color: #4cc9f0;
+}
+
+.switch input:focus + .slider {
+  box-shadow: 0 0 1px #4cc9f0;
+}
+
+.switch input:checked + .slider:before {
+  transform: translateX(2em);
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+/* Add some cool effects */
+.slider:after {
+  content: "Off";
+  color: white;
+  position: absolute;
+  right: 0.6em;
+  top: 44%;
+  transform: translateY(-50%);
+  font-size: 16px;
+  font-weight: 600;
+  font-family: "SVN-Gilroy", sans-serif;
+  transition: opacity 0.4s;
+  opacity: 1;
+}
+
+.switch input:checked + .slider:after {
+  content: "ON";
+  left: 0.5em;
+  opacity: 1;
+  right: auto;
+}
+
+.finance__container {
+  padding-top: 4.65rem;
+}
+.finance__heading {
+  letter-spacing: -0.4px;
+}
+.finance__button {
+  background: #151515;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 8px;
+       column-gap: 8px;
+  height: 32px;
+  padding: 0.5rem 1rem;
+  margin-bottom: 1.9rem;
+}
+.finance__text {
+  color: #B4B4B4;
+  font-size: 12px;
+  font-weight: 600;
+  font-family: "SVN-Gilroy", sans-serif;
+}
+.finance-icon {
+  margin-bottom: 2.2rem !important;
+}
+.finance__data {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(71.6px, 1fr));
+  align-items: center;
+  margin-bottom: 1.75rem;
+}
+.finance__data span {
+  font-size: 14px;
+  font-weight: 600;
+  font-family: "SVN-Gilroy", sans-serif;
+  color: #151515;
+  text-align: center;
+  line-height: 1.5;
+}
+.finance__content {
+  border-bottom: 2px solid rgba(180, 180, 180, 0.6);
+  padding-bottom: 0.5rem;
+  margin-bottom: 1.9rem;
+}
+.finance__skincare {
+  color: #038168 !important;
+}
+.finance__description {
+  color: #B4B4B4;
+}
+.finance__main {
+  margin-bottom: 5px;
+}
+.finance__total {
+  font-size: 20px;
+  font-weight: 600;
+  font-family: "SVN-Gilroy", sans-serif;
+  color: #038168;
+  text-align: right;
+  letter-spacing: -0.5px;
 }/*# sourceMappingURL=main.css.map */
