--- a/scss/_finance.scss
+++ b/scss/_finance.scss
@@ -59,6 +59,8 @@
         color: #038168;
         text-align: right;
         letter-spacing: -0.5px;
+        margin-top: 2.2rem;
     }
+    
 
 }
