--- a/scss/_nail.scss
+++ b/scss/_nail.scss
@@ -1,5 +1,6 @@
 .nail{
     background-color: #FFF2F2;
+    overflow: hidden;
     &__container{
         padding-top: 5.05rem;
         padding-bottom: 4rem;
@@ -65,12 +66,16 @@
     }
 
 
+    &-container{
+        margin-top: -1rem;
+        padding-bottom: 7.2rem;
+    }
     &-content{
         position: relative;
         display:flex;
         align-items: center;
         justify-content: space-between;
-        padding-top: 2.2rem;
+        padding-top: 2.3rem;
     }
     &__arrow-left{
         height: 51px !important;
@@ -80,15 +85,210 @@
         display: block;
         img{
             color: #fff;
+            position: absolute;
+            top: 3rem;
+            padding: 0 0 0 0.5rem;
+        }
+    }
+
+    &__arrow-right{
+        height: 51px !important;
+        width: 30px !important;
+        background: #B4B4B4;
+        border-radius: 8px 0 0 0;
+        display: block;
+        img{
+            color: #fff;
+            position: absolute;
+            top: 3rem;
+            padding: 0 0 0 0.5rem;
         }
     }
     
-    &-left{
+    &-left,
+    &-right{
         font-size: 14px;
         font-weight: 600;
         font-family: "SVN-Gilroy", sans-serif;
     }
     &__logo{
-        margin-left: 9px;
+        img{
+            margin-left: -1px;
+        }
     }
+    &-left{
+        width: 57px;
+        height: 29px;
+        background: #151515;
+        color: #EFEFEF;
+        display: block;
+        border-radius: 0 8px 0 0;
+        position: absolute;
+        top: 4rem;
+        padding-top: 0.5rem;
+        padding-left: 1rem;
+    }
+    &-right{
+        width: 57px;
+        height: 29px;
+        background: #B4B4B4;
+        color: #EFEFEF;
+        display: block;
+        border-radius: 8px 0 0 0;
+        position: absolute;
+        top: 4rem;
+        padding-top: 0.5rem;
+        padding-left: 1rem;
+        right: 0px;
+    }
+
+    &__article{
+        width: 235.71px;
+    }
+    &-data{
+        width: 245px !important;
+        overflow: hidden;
+        position: relative;
+    }
+    .swiper-button-next {
+        right: 42px;
+        left: auto;
+        top: 12.9rem;
+        background-color: rgba(21, 21, 21, 0.6);
+        width: 28.57px;
+        height: 28.57px;
+    }
+    .swiper-button-prev {
+        left: 40px;
+        right: auto;
+        background-color: rgba(21, 21, 21, 0.4);
+        right: auto;
+        top: 12.9rem;
+        width: 28.57px;
+        height: 28.57px;
+    }
+    &-buttons{
+        display: flex;
+        align-items: center;
+        justify-content: right;
+        margin: 1.03rem 0 1rem;
+        transform: translateX(-11px);
+        column-gap: 16px;
+
+    }
+    &-button{
+        display: flex;
+        align-items: center;
+        width: 141px;
+        height: 20px;
+        font-size: 12px;
+        font-weight: 600;
+        font-family: "SVN-Gilroy", sans-serif;
+        column-gap: 9px;
+        border: 1px solid #151515;
+        border-radius: 20px;
+        color: #151515;
+        padding: 1px 3px 3px 7px;
+        letter-spacing: 0.1px;
+    }
+    &__continue{
+        width: 62px;
+        height: 20px;
+        background: #151515;
+        color: #EFEFEF;
+        font-size: 12px;
+        font-weight: 600;
+        font-family: "SVN-Gilroy", sans-serif;
+        border-radius: 20px;
+    }
+    &__color-tone{
+        color: #EFEFEF;
+        font-size: 12px;
+        font-weight: 600;
+        font-family: "SVN-Gilroy", sans-serif;
+        background: #151515;
+        width: 121.68px;
+        height: 23px;
+        border-radius: 36px;
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto;
+        transform: translateX(-3px);
+        border: 2px solid #FFF2F2;
+    }
+    &__select-color{
+        background: #EFEFEF;
+        padding: 1rem;
+        border-radius: 20px;
+        box-shadow: 2px 2px 4px #e5d9d9;
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        column-gap: 10.5px;
+        padding: 0.5rem 0 0.8rem;
+        height: 55px;
+        width: 338px;
+        transform: translateX(10px);
+    }
+    &__danger,
+    &__brick,
+    &__yellow,
+    &__green,
+    &__primary,
+    &__purple{
+        width: 32px;
+        height: 32px;
+        border-radius: 360px;
+    }
+    &__danger{
+        border: 1px solid #460E0E;
+        background-color: #FF5F5F;
+    }
+    &__brick{
+        background-color: #FF8933;
+    }
+    &__yellow{
+        background-color: #F5D425;
+    }
+    &__green{
+        background-color: #2ED549;
+    }
+    &__primary{
+        background-color: #456EFF;
+    }
+    &__purple{
+        background-color: #C23DF0;
+    }
+    &-main{
+        padding-top: 3.3rem;
+        position: relative;
+        .swiper-button-next {
+            right: -3px;
+            left: auto;
+            top: 11.1rem;
+            background-color: rgba(21, 21, 21, 0.6);
+            width: 28.57px;
+            height: 28.57px;
+        }
+    }
+    &-article{
+        width: 132px !important;
+        height: 94px !important;
+        display: flex;
+        flex-direction: column;
+        row-gap: 11px;
+        img{
+            height: 66px !important;
+        }
+        span{
+            font-family: "Volkhov", serif;
+            font-size: 14px;
+            font-weight: 700;
+        }
+    }
+    &__images{
+        margin-top: 2.7rem;
+    }
+ 
 }
